# Pulse_backend_c-

./: .dockerignore  .env.example  .env.production.example  .gitignore  CMakeLists.txt  Caddyfile  DEPLOY.md  Dockerfile  README.md  config.json  docker-compose.yml  start.bat  vcpkg.json
docs/: PORTING_CONVENTIONS.md  port-spec-raw.json  port-spec-services.json
include/pulse/: algorithms.hpp  bson_json.hpp  cache.hpp  common.hpp  config.hpp  db.hpp  http_response.hpp  json.hpp  jwt_service.hpp  logger.hpp  models.hpp  scheduler.hpp
include/pulse/controllers/: admin_controller.hpp  alter_ego_controller.hpp  auth_controller.hpp  bookmark_controller.hpp  call_controller.hpp  chain_controller.hpp  chat_controller.hpp  comment_controller.hpp  feed_controller.hpp  gif_controller.hpp  group_controller.hpp  media_controller.hpp  notification_controller.hpp  og_controller.hpp  otp_controller.hpp  post_controller.hpp  pulse_drop_controller.hpp  pulse_score_controller.hpp  push_controller.hpp  reel_controller.hpp  referral_controller.hpp  roulette_controller.hpp  snap_controller.hpp  social_dna_controller.hpp  user_controller.hpp  whisper_controller.hpp
include/pulse/filters/: auth_filters.hpp  rate_limit_filters.hpp  sanitize_filter.hpp  upload_filters.hpp
include/pulse/models/: alterego.hpp  bookmark.hpp  chainstory.hpp  comment.hpp  conversation.hpp  follow.hpp  like.hpp  message.hpp  notification.hpp  otp.hpp  post.hpp  pulsedrop.hpp  pulsescore.hpp  reel.hpp  reelcomment.hpp  roulette.hpp  session.hpp  snap.hpp  socialdna.hpp  user.hpp  userbehavior.hpp  userengagement.hpp  whisper.hpp
include/pulse/services/: alter_ego_ai_service.hpp  auth_service.hpp  custom_otp_service.hpp  embedding_service.hpp  feed_service.hpp  feedback_service.hpp  firebase_service.hpp  http_client.hpp  livekit_service.hpp  media_service.hpp  presence_service.hpp  push_service.hpp  smtp_service.hpp  trust_service.hpp  user_vector_service.hpp  vector_retrieval_service.hpp
include/pulse/sockets/: presence_socket.hpp  realtime_controller.hpp  socket_rate_limit.hpp
scripts/: build.bat
src/: main.cc
src/algorithms/: comments_algo.cc  dna_match_algo.cc  feed_algo.cc  interest_profiler.cc  mood_detector.cc  reel_algo.cc  user_algo.cc  vibe_classifier.cc
src/config/: config.cc
src/controllers/: admin_controller.cc  alter_ego_controller.cc  auth_controller.cc  bookmark_controller.cc  call_controller.cc  chain_controller.cc  chat_controller.cc  comment_controller.cc  feed_controller.cc  gif_controller.cc  group_controller.cc  media_controller.cc  notification_controller.cc  og_controller.cc  otp_controller.cc  post_controller.cc  pulse_drop_controller.cc  pulse_score_controller.cc  push_controller.cc  reel_controller.cc  referral_controller.cc  roulette_controller.cc  snap_controller.cc  social_dna_controller.cc  user_controller.cc  whisper_controller.cc
src/db/: bson_json.cc  cache.cc  db.cc  indexes.cc
src/filters/: auth_filters.cc  rate_limit_filters.cc  sanitize_filter.cc  upload_filters.cc
src/jobs/: scheduler.cc
src/models/: alterego.cc  bookmark.cc  chainstory.cc  comment.cc  conversation.cc  follow.cc  like.cc  message.cc  notification.cc  otp.cc  post.cc  pulsedrop.cc  pulsescore.cc  reel.cc  reelcomment.cc  roulette.cc  session.cc  snap.cc  socialdna.cc  user.cc  userbehavior.cc  userengagement.cc  whisper.cc
src/services/: alter_ego_ai_service.cc  auth_service.cc  custom_otp_adapter.cc  custom_otp_service.cc  embedding_service.cc  feed_service.cc  feedback_service.cc  firebase_service.cc  jwt_service.cc  livekit_service.cc  media_service.cc  presence_service.cc  push_service.cc  smtp_service.cc  trust_service.cc  user_vector_service.cc  vector_retrieval_service.cc
src/sockets/: presence_socket.cc  realtime_controller.cc  socket_rate_limit.cc
src/utils/: logger.cc
tests/: CMakeLists.txt  bson_json_tests.cc
